# aad_fastapi

./: .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  makefile  mkdocs.yml  pyproject.toml  python-path.env  readme.md  requirements-test.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  azure.sh  devcontainer.env  devcontainer.json  docker-compose.yml  requirements.txt
.github/: FUNDING.yml  release_message.sh
.github/workflows/: main.yml  release.yml
aad_fastapi/: VERSION  __init__.py  aad_auth_error.py  aad_autherror.py  aad_bearer_backend.py  aad_cache_manager.py  aad_decorators.py  aad_discover_keys.py  aad_helpers.py  aad_options.py  aad_token.py  aad_user.py  aad_vault.py  base.py
aad_fastapi/roles/: all_role_validator.py  any_role_validator.py  (+3 more)
sample/: README.md  requirements.txt
src/: pyproject.toml  setup.py
src/aad/: __init__.py  aad_authentication_client.py  aad_autherror.py  aad_bearer_backend.py  aad_cache_manager.py  aad_client.py  aad_decorators.py  aad_helpers.py  aad_options.py  aad_session_backend.py  aad_token.py  aad_user.py
src/aad_fastapi/: __init__.py  aad_discover_keys.py  aad_helpers.py  aad_options.py  aad_token.py
tests/: README.md  conftest.py  helpers.py  http_client.py  private.pem  public.pem  requirements.txt  test_aad_auth_token.py  test_aad_authentication_client.py  test_aad_bearer_middleware.py  test_aad_cache_manager.py  test_aad_helpers.py  test_aad_session_middleware.py  test_aad_vault.py  test_authorize_decorator.py  test_base.py  test_oauth2_scheme.py  test_role_validator.py
(+9 files in other folders)
